# procurement_repo

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  simulate_sap.py
contracts/: VendorShopLite.vy  ZeroDegreeRegistry.vy
snowgate/: .env.example  .gitignore  ape-config.yaml  start_sg.sh
snowgate/.build/: __local__.json
snowgate/app/: main.py  settings.py
snowgate/app/templates/: agent.html  base.html  session.html
snowgate/app/views/: agent.py  session_purchase.py
snowgate/contracts/: SnowGate.vy  SnowGateSession.vy
snowgate/scripts/: deploy.py  flight.py
zero_degree/: .env.example  README.md  deployed_shops.txt  pyproject.toml  start_zd.sh  state_0x0F7073c2.json  state_0x22a453Bc.json  state_0x2Bb1CbDD.json  state_0x4008F348.json  state_0x4E7bF73d.json  state_0x4ab0c85F.json  state_0x516c8C70.json  state_0x56F0cDcD.json  state_0x87254613.json  state_0x8d146b44.json  state_0x9369904E.json  state_0xAa930125.json  state_0xB28560a7.json  state_0xF08ae681.json  state_0xF1B6a98B.json  state_0xbFa2790E.json  state_0xe54Bb95E.json
zero_degree/.build/: __local__.json
zero_degree/app/: crud.py  db.py  helpers.py  main.py  models.py  settings.py  templates.py
zero_degree/app/core/: blockchain.py
zero_degree/app/routes/: merchants.py
zero_degree/app/templates/: index.html
zero_degree/app/templates/merchants/: merchant_dashboard.html
zero_degree/app/workers/: sync_worker.py
zero_degree/contracts/: VendorShopLite.vy  ZeroDegreeRegistry.vy
zero_degree/scripts/: deploy.py  monitor.py
